--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "clawedroad"]
 	path = clawedroad
 	url = https://github.com/sanctumos/clawedroad.git
+[submodule "roxyipt"]
+	path = roxyipt
+	url = https://github.com/nanohits/roxyipt-releases.git
+
+
+
+
